--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 OWNER_NAME="Pkdriller"
-PREFIX="3"
-PUBLIC_MODE='non'
-AUTO_READ_STATUS="non"
+PREFIX="2"
+PUBLIC_MODE='yes'
+AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="oui"
 BOT_NAME= "NEXUS-AI"
 IMAGE_MENU= "https://i.imgur.com/hk3vZ9W.jpeg"
